Co-authored-by: nicoelcapo98 <nicoelcapo98@users.noreply.github.com>

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,6 +1,6 @@
 @book{mohan,
   title     = {Power Electronics: Converters, Applications, and Design},
-  author    = {Ned Mohan and Tore M. Undeland and William P. Robbins},
+  author    = {Mohan, Ned and Undeland, Tore M. and Robbins, William P.},
   publisher = {Wiley},
   isbn      = {978047122693},
   year      = {2002},
@@ -9,7 +9,7 @@
 
 @book{hart,
   title     = {Power Electronics},
-  author    = {Daniel W. Hart},
+  author    = {Hart, Daniel W.},
   publisher = {McGraw-Hill Science/Engineering/Math},
   isbn      = {9780073380674},
   year      = {2010},
@@ -18,7 +18,7 @@
 
 @book{hart_espanol,
    title =     {Electrónica De Potencia},
-   author =    {Daniel W. Hart},
+   author =    {Hart, Daniel W.},
    publisher = {PEARSON EDUCACION},
    isbn =      {9788420531793},
    year =      {2001}
@@ -35,15 +35,22 @@
 
 @book{pressman,
   title     = {Switching Power Supply Design},
-  author    = {Abraham Pressman and Keith Billings and Taylor Morey},
+  author    = {Pressman, Abraham and Billings, Keith and Morey, Taylor},
   publisher = {McGraw-Hill Professional},
   isbn      = {9780071594325},
   year      = {2009},
   edition   = {3}
 }
 
+@book{trafos,
+  author         = {Siemens},
+  title          = {Ferrites and Hardware},
+  year           = {1983},
+  url            = {http://www.bitsavers.org/components/siemens/1983_Siemens_Ferrite_Cores_and_Hardware.pdf}
+}
+
 @article{modelo_bateria_1,
-  author  = {Ahmad Rahmoun and Helmuth Biechl},
+  author  = {Rahmoun, Ahmad and Biechl, Helmuth},
   journal = {PRZEGLAD ELEKTROTECHNICZNY},
   title   = {Modelling of Li-ion batteries using equivalent circuit diagrams},
   year    = {2012},
@@ -84,8 +91,78 @@
 
 @techreport{gatedrivers,
   title = {Fundamentals of MOSFET and IGBT Gate Driver Circuits},
-  author = {Laszlo Balogh},
+  author = {Balogh, Laszlo},
   year = {2018},
   institution = {Texas Instruments},
   url = {https://www.ti.com/lit/ml/slua618a/slua618a.pdf}
+}
+@article{bms,
+  author  = {Medela, Juan},
+  journal = {Cambio Energético},
+  title   = {¿Qué es un sistema de gestión de batería BMS?},
+  year    = {2021},
+  url     = {https://www.cambioenergetico.com/blog/sistema-gestion-bateria-bms/}
+}
+
+@manual{tl494,
+  organization = {Texas Instruments},
+  title   = {TL494 Pulse-Width-Modulation Control Circuits},
+  year    = {2019},
+  url     = {https://www.ti.com/lit/ds/symlink/tl494.pdf},
+  number  = {TL494}
+}
+
+@article{Gi,
+  author  = {Laquidara, Aníbal and Perez, Isidoro Pablo},
+  journal = {Cátedra de Circuitos Electrónicos II},
+  title   = {Amplificadores de audiofrecuencias de gran señal},
+  year    = {2019},
+  url     = {http://catedra.ing.unlp.edu.ar/electrotecnia/electronicos2/download/Apuntes/Teo2-AmpliaudioGS.pdf}
+}
+
+#https://fscdn.rohm.com/en/products/databook/applinote/ic/power/switching_regulator/buck_snubber_app-e.pdf
+@manual{snubber,
+  organization = {ROHM Semiconductor},
+  title   = {Snubber Circuit for Buck Converter IC},
+  year    = {2016},
+  url     = {https://fscdn.rohm.com/en/products/databook/applinote/ic/power/switching_regulator/buck_snubber_app-e.pdf},
+  number  = {Switching Regulator Series}
+}
+#https://www.vishay.com/docs/88755/uf4001.pdf
+@manual{uf4007,
+  organization = {Vishay},
+  title   = {UF4001, UF4002, UF4003, UF4004, UF4005, UF4006, UF4007},
+  year    = {2020},
+  url     = {https://www.vishay.com/docs/88755/uf4001.pdf},
+  number  = {Ultrafast Rectifier Diodes}
+}
+#https://www.vishay.com/docs/91070/91070.pdf
+@manual{IRF840,
+  organization = {Vishay},
+  title   = {IRF840},
+  year    = {2021},
+  url     = {https://www.vishay.com/docs/91070/91070.pdf},
+  number  = {Power MOSFET}
+}
+
+@misc{skin,
+  author = "{Wikipedia contributors}",
+  title = "Skin effect --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  url = "https://en.wikipedia.org/w/index.php?title=Skin_effect&oldid=1103888417",
+  note = "[Online; accessed 7-December-2022]"
+}
+
+@misc{pcb-atei,
+  author       = {{ATEI - Cátedra de Proyecto Final}},
+  howpublished = {Documento de la cátedra},
+  title        = {Introducción a la Construcción de Circuitos Impresos},
+  year         = {2022}
+}
+
+@misc{diseno-trafo-kike,
+  author       = {{Cátedra de Proyecto Final}},
+  howpublished = {Documento de la cátedra},
+  title        = {Diseño muy básico de Inductores y Transformadores},
+  year         = {2022}
 }
