--- a/sections/bms.tex
+++ b/sections/bms.tex
@@ -3,7 +3,7 @@
 Un Sistema de Gestión de Baterías o Battery Management System (BMS) es un sistema electrónico que gestiona y controla baterías recargables,
 garantizando su protección a partir de la limitación de su funcionamiento dentro del área de operación segura.
 Realiza un seguimiento de su estado, recopila, procesa y almacena los datos obtenidos en tiempo real, controla su entorno y puede intercambiar información con dispositivos externos.
-Su función principal es el balance o equilibrio de las celdas de la batería.
+Su función principal es el balance o equilibrio de las celdas de la batería \cite{bms}.
 
 \subsubsection{Funciones}
 
