--- a/sections/introduccion.tex
+++ b/sections/introduccion.tex
@@ -26,3 +26,5 @@ El uso de las baterías de litio está en constante crecimiento y,
 debido a que es un material altamente reactivo,
 es necesario que el proceso de carga se realice de manera correcta,
 con la finalidad de ofrecer una carga segura y eficaz.
+
+El objetivo principal es diseñar un dispositivo que sea capaz de realizar una carga completa de una batería en buen estado.
