--- a/sections/perfil_de_carga.tex
+++ b/sections/perfil_de_carga.tex
@@ -1,7 +1,7 @@
 \subsection{Ciclo de carga}
 
 %Carga en dos o tres etapas según la tensión de la batería en el momento de su conexión: precarga, corriente constante y tensión constante. 
-Está dividido en dos o tres etapas según la tensión de la batería en el momento de su conexión: precarga, corriente constante y tensión constante.
+Está dividido en dos o tres etapas según la tensión de la batería en el momento de su conexión: precarga, corriente constante y tensión constante \cite{icr18650s3}\cite{ncr18650ga}.
 
 La etapa de precarga sólo tiene lugar en baterías que han sido profundamente descargadas y cuya tensión sea superior a 22V e inferior a 30V.
 Se le entrega una corriente constante, cuyo valor se limita a un quinto de la corriente de carga nominal.
