--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 
-% Contenido del informe, objetivos generales, motivación, resultados y conclusiones más importantes
+% Objetivos generales, resultados y conclusiones más importantes
 
     En este informe se desarrolla un cargador para baterías de litio de 36V de diferentes capacidades,
     describiendo las decisiones tomadas durante la etapa de diseño, 
@@ -10,7 +10,6 @@
     Se alimenta de una tensión de 110 a 240V de corriente alterna, a 50 o 60Hz.
     Presenta siete modos de carga para baterías de 2.2Ah a 13.2Ah, seleccionables por el usuario, que regulan la intensidad de corriente de salida desde 1A hasta 6.7A.
     Su potencia máxima es de 282W.
-
     Se utilizó una topología forward doble switch para la etapa de conversión DC-DC
     y un circuito integrado para la etapa de control.
 
